# Password_Manager

./: CMakeLists.txt  README.md
Code/: Category.cpp  Category.h  Files.cpp  Files.h  main.cpp
Files/: Studia.txt  home.txt  timestamp.txt  work.txt
